<resources>
    <string name="app_name">Unit Converter</string>
    <string name="image">image</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="bmi_caculator">BMI Calculator</string>
    <string name="start">Start</string>
    <string name="what_you_would_like_to_do">What you would like to do</string>
    <string name="qr">QR</string>
    <string name="usd">USD</string>
    <string name="convertQR">Convert from QR</string>
    <string name="convertUSD">Convert from USD</string>
</resources>